2005-09-09 21:26  hjanuschka

	* src/client/cmd.c: compile warnings fixed (cmd.c)

2005-09-09 21:24  hjanuschka

	* src/client/cmd.c: littel cmd tool for working with passive
	  services

2005-09-09 21:23  hjanuschka

	* ChangeLog, src/Makefile, src/client/Makefile,
	  src/client/portier.c: portier: added get_passive cmd added a
	  little dummy passive portier query tool (wich can set passive
	  states and recieve passiv service info

2005-09-08 00:36  hjanuschka

	* include/bartlby.h, src/check.c, src/client/portier.c: portier:
	  added err code -4 svc not found check: group check fixed ,
	  runnaway strtok :-)

2005-09-07 23:52  hjanuschka

	* src/client/portier.c: portier import

2005-09-07 23:51  hjanuschka

	* include/bartlby.h, src/check.c, src/global.c,
	  src/client/Makefile: fixed passive check_fin bug added
	  bartlby_portier passive results may now be deliverd from remote

2005-09-07 21:33  hjanuschka

	* ChangeLog: [no log message]

2005-09-06 23:47  hjanuschka

	* ChangeLog, bartlby.cfg:
	  commit before bed time ;-)

2005-09-06 22:59  hjanuschka

	* ChangeLog, Makefile, bartlby.cfg, src/bartlby.c: performance
	  tests fixes addition's

2005-09-05 22:00  hjanuschka

	* src/: config.c, global.c: stupid configfile issue fixed

2005-09-05 21:53  hjanuschka

	* src/daemon.c: daemon maybe safe shutdown by SIGINT SIGUSR1

2005-09-05 21:53  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/Makefile,
	  src/bartlby.c, src/check.c, src/global.c, src/sched.c,
	  src/libs/mysql.c: 2 day uptime without a single sigsegv ;-) added
	  daemon function ;-)	      new cfg vars daemon=[true|false],
	  basedir, logfile

2005-09-04 01:01  hjanuschka

	* ChangeLog, include/bartlby.h, src/bartlby.c, src/sched.c,
	  src/libs/mysql.c, src/tools/shmt.c: datalib api refined moved to
	  version 0.9.7 reload via SHM

2005-09-03 22:11  hjanuschka

	* ChangeLog, include/bartlby.h, src/bartlby.c, src/check.c,