@@ -21,9 +21,11 @@ agent_plugin_dir=/storage/SF.NET/BARTLBY/bartlby-plugins
 
 logfile=/var/log/bartlby.log
 basedir=/storage/SF.NET/BARTLBY/bartlby-core/
-daemon=false
+daemon=true
 
 shm_size=70
 
+
+pidfile_dir=/var/run/
 
 fsd
