@@ -111,6 +111,7 @@ void bartlby_decode(char * msg, int length);
 void bartlby_encode(char * msg, int length);
 char * bartlby_beauty_state(int status);
 
+void bartlby_end_daemon(char *cfgfile);
 void bartlby_get_daemon(char * cfgfile);
 void set_cfg(char * cfg);
 
